tests/logical/logical.exp
Error ---------------------------------------------------------- logical.js:8:12

Cannot return `x && '123'` because boolean [1] is incompatible with number [2].


Error --------------------------------------------------------- logical.js:23:12

Cannot return `false && '123'` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:101:12

Cannot return `(x != null) && (x > 10)` because:
 - boolean [1] is incompatible with string [2].
 - boolean [3] is incompatible with string [2].


Error -------------------------------------------------------- logical.js:109:12

Cannot return `(x != null) && x` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:117:12

Cannot return `(x != undefined) && x` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:124:12

Cannot return `x && '123'` because boolean [1] is incompatible with string [2].


Error -------------------------------------------------------- logical.js:148:12

Cannot return `x || 0` because boolean [1] is incompatible with string [2].


Error -------------------------------------------------------- logical.js:176:12

Cannot return `true || '123'` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:281:12

Cannot return `x || (1 && 'foo')` because boolean [1] is incompatible with
string [2].


Error: logical.js:291
291:     return x || y || false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
290: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error: logical.js:315
315:     return x && y && false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
314: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error -------------------------------------------------------- logical.js:322:12

Cannot return `false && x && y` because boolean [1] is incompatible with array
type [2].


Error -------------------------------------------------------- logical.js:329:12

Cannot return `x && false && y` because:
 - number [1] is incompatible with array type [2].
 - boolean [3] is incompatible with array type [2].


Error -------------------------------------------------------- logical.js:348:18

Cannot assign `y || true` to `y` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:348:18

boolean [1] is incompatible with number [2].


Error -------------------------------------------------------- logical.js:363:12

Cannot return `y` because boolean [1] is incompatible with number [2].


Error -------------------------------------------------------- logical.js:371:18

Cannot assign `y && true` to `y` because boolean [1] is incompatible with
number [2].


Error -------------------------------------------------------- logical.js:371:18

boolean [1] is incompatible with number [2].


Error -------------------------------------------------------- logical.js:380:12

Cannot return array literal because:
 - in type argument `T` and then property `x`, number [1] is incompatible with
   string [2].
 - in type argument `T` and then property `x`, boolean [3] is incompatible with
   string [2].
 - in type argument `T` and then property `x`, boolean [4] is incompatible with
   string [2].


Error -------------------------------------------------------- logical.js:396:12

Cannot return array literal because:
 - in type argument `T` and then property `x`, number [1] is incompatible with
   string [2].
 - in type argument `T` and then property `x`, boolean [3] is incompatible with
   string [2].
 - in type argument `T` and then property `x`, boolean [4] is incompatible with
   string [2].


Error -------------------------------------------------------- logical.js:510:11

Cannot return `x.y && x.z` because string [1] is incompatible with boolean [2].


Error -------------------------------------------------------- logical.js:513:11

Cannot return `x.y || x.z` because string [1] is incompatible with boolean [2].



Found 28 errors
